# EinStein-w-rfelt-nicht

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DEVELOPMENT_GUIDE.md  LICENSE  README.md  REFACTORING_PLAN.md  build.bat  build.sh  build_script.sh  pyproject.toml  requirements.txt  run_game.sh  run_vmodel_tests.bat  run_vmodel_tests.sh
assets/: .gitkeep
build-coverage/: config.json
build-coverage/ml_models/: einstein_nn.py
docs/: .gitkeep  CONFIGURABLE_INITIALIZATION.md  GAME_RULES.md  README.md  VMODEL_TESTING.md
include/ai/: MCTS.h  NeuralNetwork.h
include/core/: ChessBoard.h  Types.h
include/game/: Game.h  GameState.h
include/graphics/: InputHandler.h  Renderer.h
include/nlohmann/: json.hpp
include/utils/: CLI.h  CLIRenderer.h  Config.h  GameSnapshot.h  Logger.h
project/: Game.cpp  Game.h  MCST.cpp  MCST.h  NeuralNetwork.cpp  NeuralNetwork.h  Paint.cpp  Paint.h  main.cpp
src/: main.cpp
src/ai/: MCTS.cpp  NeuralNetwork.cpp
src/core/: ChessBoard.cpp
src/game/: Game.cpp  GameState.cpp
src/graphics/: InputHandler.cpp  Renderer.cpp
src/tools/: reserialize_snapshots.cpp
src/utils/: CLI.cpp  CLIRenderer.cpp  CLI_OLD.cpp  Config.cpp  GameSnapshot.cpp  Logger.cpp
tests/: .gitkeep  DevelopmentVModelRunner.cpp  SimpleVModelRunner.cpp  TestFramework.h  VModelTestRunner.cpp  test_main.cpp
tests/acceptance/: AcceptanceTests.cpp
tests/framework/: VModelTestFramework.cpp  VModelTestFramework.h
tests/integration/: IntegrationTests.cpp
tests/system/: SystemTests.cpp
tests/unit/: CoreUnitTests.cpp  ExtraCoverageTests.cpp  GameSnapshotCoverageTests.cpp  GameSnapshot_AI_Run_Test.cpp  GameSnapshot_Capture_RunFromSnapshot_Test.cpp  GameSnapshot_ExtraCoverageTests.cpp  GameSnapshot_GetAIMove_RunTest.cpp  GameSnapshot_IntegrationMore.cpp  GameSnapshot_MCTSTests.cpp  GameSnapshot_MoreIntegration2.cpp  GameSnapshot_TargetedCoverageTests.cpp  GameSnapshot_ToString_DeepTest.cpp  GameSnapshot_ToString_Test.cpp  MCTSSnapshotJsonDebugTest.cpp  MCTSSnapshotJsonTest.cpp  SnapshotRoundTripTest.cpp
tools/: coverage_summary.py  coverage_uncovered.py  map_uncovered_to_functions.py
weight/: .gitkeep
