[project]
name = "einstein-w-rfelt-nicht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "h5py>=3.6.0",
    "matplotlib>=3.5.0",
    "memory-profiler>=0.60.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "psutil>=5.8.0",
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "tensorflow>=2.8.0",
    "toml>=0.10.0",
]
